# VibeTGVideoDownloader

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  login.py  pyproject.toml  requirements.txt  telegram_backend.py
telegram_backend/: __init__.py  client.py  downloader.py  filesystem.py  scanner.py  state.py
ui/: api_routes.py  helpers.py  theme.py
